--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "@mdxeditor/editor": "^3.11.0",
     "@monaco-editor/react": "^4.6.0",
+    "easymde": "^2.18.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-simplemde-editor": "^5.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
