--- a/backend/.env
+++ b/backend/.env
@@ -5,3 +5,5 @@ MONGO_URI="mongodb://localhost:27017/DocuZen"
 CORS_ORIGIN="http://localhost:5173"
 
 JWT_SECRET="Jigy2A0e6dfD6KREJfqEBuxXh6sz35zUIP8H6Aoi/6o="
+
+GOOGLE_API_KEY="AIzaSyD5GVKbIsLVu9dPB5jTWrFbU4tTXMDX2es"
