--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "easymde": "^2.18.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.0",
     "react-simplemde-editor": "^5.2.0"
   },
   "devDependencies": {
