--- a/backend/.env
+++ b/backend/.env
@@ -7,3 +7,7 @@ CORS_ORIGIN="http://localhost:5173"
 JWT_SECRET="Jigy2A0e6dfD6KREJfqEBuxXh6sz35zUIP8H6Aoi/6o="
 
 GOOGLE_API_KEY="AIzaSyD5GVKbIsLVu9dPB5jTWrFbU4tTXMDX2es"
+
+GOOGLE_AUTH_CLIENT_ID="939931683995-267vi5b0qopmcr5jaf6n7t1m8jcgm5jg.apps.googleusercontent.com"
+
+GOOGLE_AUTH_CLIENT_SECRET="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"
