--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,11 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@craco/craco": "^7.1.0",
     "@mdxeditor/editor": "^3.11.0",
     "@monaco-editor/react": "^4.6.0",
     "easymde": "^2.18.0",
+    "js-cookie": "^3.0.5",
+    "prop-types": "15.7.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-helmet": "^6.1.0",
     "react-router-dom": "^6.26.0",
     "react-simplemde-editor": "^5.2.0"
   },
