--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@craco/craco": "^7.1.0",
+    "@craco/craco": "^5.9.0",
     "@mdxeditor/editor": "^3.11.0",
     "@monaco-editor/react": "^4.6.0",
     "easymde": "^2.18.0",
@@ -19,6 +19,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet": "^6.1.0",
+    "react-icons": "^5.2.1",
     "react-router-dom": "^6.26.0",
     "react-simplemde-editor": "^5.2.0"
   },
