--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,13 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@craco/craco": "^5.9.0",
     "@mdxeditor/editor": "^3.11.0",
     "@monaco-editor/react": "^4.6.0",
+    "bootstrap": "^5.3.3",
     "easymde": "^2.18.0",
+    "file-saver": "^2.0.5",
     "js-cookie": "^3.0.5",
+    "jspdf": "^2.5.1",
     "prop-types": "15.7.2",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
     "react-helmet": "^6.1.0",
     "react-icons": "^5.2.1",
