--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,10 @@
     "bootstrap": "^5.3.3",
     "easymde": "^2.18.0",
     "file-saver": "^2.0.5",
+    "html-to-pdfmake": "^2.5.12",
     "jspdf": "^2.5.1",
+    "marked": "^14.0.0",
+    "pdfmake": "^0.2.11",
     "prop-types": "15.7.2",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
