--- a/backend/.env
+++ b/backend/.env
@@ -12,4 +12,4 @@ GOOGLE_AUTH_CLIENT_ID="939931683995-267vi5b0qopmcr5jaf6n7t1m8jcgm5jg.apps.google
 
 GOOGLE_AUTH_CLIENT_SECRET="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"
 
-REQUEST_TO_URL="http://localhost"
+REQUEST_TO_URL="http://localhost:3000"
