--- a/backend/.env-sample
+++ b/backend/.env-sample
@@ -4,7 +4,7 @@ MONGO_URI="mongodb://localhost:27017/DocuZen"
 
 CORS_ORIGIN="http://localhost:5173"
 
-JWT_SECRET="Jigy2A0e6dfD6KREJfqEBuxXh6sz35zUIP8H6Aoi/6o="
+JWT_SECRET=[YOUR-JWT-SECRET]
 
 GOOGLE_API_KEY=[YOUR-GEMINI-CODE]
 
