--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "react-dom": "^18.3.1",
     "react-helmet": "^6.1.0",
     "react-icons": "^5.2.1",
+    "react-resizable-panels": "^2.1.2",
     "react-router-dom": "^6.26.0",
     "react-simplemde-editor": "^5.2.0",
     "universal-cookie": "^7.2.0"
